--- a/html/user-history.html
+++ b/html/user-history.html
@@ -145,21 +145,24 @@
                             </div>
                         </div>
                         <div class="display-content mb-3">
+
                             <div class="d-flex mt-4 section-dislay-content">
                                 <div class="d-flex align-items-center" style="flex:1.5;">
                                     <div class="ms-4 d-flex align-items-start ">
                                       <input type="checkbox" id="select-user" class="me-2" />
                                     </div>
                                     <label for="select-user" class="mb-0">Nguyễn Văn A A Văn Nguyễn Nguyễn văn nguyễn </label>
-                                </div>
+                                </div>                                  
                                 <div class="line-content"></div>
                                 <div class="d-flex align-items-center " style="flex: 2;justify-content: start;">
                                     <p style="color: #919191;font-weight: 400;" class="ms-5">Màn hình chính </p>
                                 </div>
                                 <div class="line-content"></div>
                                 <div class="d-flex align-items-center" style="flex: 3;overflow: hidden;">
-                                    <p class="detail-content mx-5 ms-5">[{citizenName: Trần Minh A, ZaloId: 0934234...}]
-                                    </p>
+                                    <div class="detail-content-container mx-5 ms-5">
+                                        <p class="detail-content">{username: anh.nv@gmail.com, password:******,username: anh.nv@gmail.com, password:******,username: anh.nv@gmail.com, password:******,username: anh.nv@gmail.com, password:******,username: anh.nv@gmail.com, password:******,username: anh.nv@gmail.com, password:******,username: anh.nv@gmail.com, password:******,username: anh.nv@gmail.com, password:******,username: anh.nv@gmail.com, password:******,username: anh.nv@gmail.com, password:******,username: anh.nv@gmail.com, password:******}
+                                        </p>
+                                    </div>
                                 </div>
                                 <div class="line-content"></div>
                                 <div class="d-flex flex-column justify-content-center align-items-center"
@@ -168,21 +171,24 @@
                                     <p>08:10:12</p>
                                 </div>
                             </div>
+                            
                             <div class="d-flex mt-4 section-dislay-content">
                                 <div class="d-flex align-items-center" style="flex:1.5;">
                                     <div class="ms-4 d-flex align-items-start ">
                                       <input type="checkbox" id="select-user" class="me-2" />
                                     </div>
                                     <label for="select-user" class="mb-0">Nguyễn Văn A </label>
-                                </div>
+                                </div>                                  
                                 <div class="line-content"></div>
                                 <div class="d-flex align-items-center " style="flex: 2;justify-content: start;">
                                     <p style="color: #919191;font-weight: 400;" class="ms-5">Màn hình chính </p>
                                 </div>
                                 <div class="line-content"></div>
                                 <div class="d-flex align-items-center" style="flex: 3;overflow: hidden;">
-                                    <p class="detail-content mx-5 ms-5">{username: anh.nv@gmail.com, password:******}
-                                    </p>
+                                    <div class="detail-content-container mx-5 ms-5">
+                                        <p class="detail-content">{username}
+                                        </p>
+                                    </div>
                                 </div>
                                 <div class="line-content"></div>
                                 <div class="d-flex flex-column justify-content-center align-items-center"
@@ -197,153 +203,17 @@
                                       <input type="checkbox" id="select-user" class="me-2" />
                                     </div>
                                     <label for="select-user" class="mb-0">Nguyễn </label>
-                                </div>
+                                </div>                                  
                                 <div class="line-content"></div>
                                 <div class="d-flex align-items-center " style="flex: 2;justify-content: start;">
                                     <p style="color: #919191;font-weight: 400;" class="ms-5">Màn hình chính </p>
                                 </div>
                                 <div class="line-content"></div>
                                 <div class="d-flex align-items-center" style="flex: 3;overflow: hidden;">
-                                    <p class="detail-content mx-5 ms-5">[{citizenName: Trần Minh A, ZaloId: 0934234234, action: “edit service”, createdDate: “22/04/2025 10:05:24”24, updatedDate: “22/04/2025 10:05:24”},{citizenName: Trần Minh A, ZaloId: 0934234234, action: “edit service”, createdDate: “22/04/2025 10:05:24”24, updatedDate: “22/04/2025 10:05:24”},{citizenName: Trần Minh A, ZaloId: 0934234234, action: “edit service”, createdDate: “22/04/2025 10:05:24”24, updatedDate: “22/04/2025 10:05:24”},{citizenName: Trần Minh A, ZaloId: 0934234234, action: “edit service”, createdDate: “22/04/2025 10:05:24”24, updatedDate: “22/04/2025 10:05:24”},{citizenName: Trần Minh A, ZaloId: 0934234234, action: “edit service”, createdDate: “22/04/2025 10:05:24”24, updatedDate: “22/04/2025 10:05:24”}]
-                                    </p>
-                                </div>
-                                <div class="line-content"></div>
-                                <div class="d-flex flex-column justify-content-center align-items-center"
-                                    style="flex:1.5;">
-                                    <p>21/04/2025</p>
-                                    <p>08:10:12</p>
-                                </div>
-                            </div>
-                            <div class="d-flex mt-4 section-dislay-content">
-                                <div class="d-flex align-items-center" style="flex:1.5;">
-                                    <div class="ms-4 d-flex align-items-start ">
-                                      <input type="checkbox" id="select-user" class="me-2" />
+                                    <div class="detail-content-container mx-5 ms-5">
+                                        <p class="detail-content">[{citizenName: Trần Minh A, ZaloId: 0934234234, action: “edit service”, createdDate: “22/04/2025 10:05:24”24, updatedDate: “22/04/2025 10:05:24”},{citizenName: Trần Minh A, ZaloId: 0934234234, action: “edit service”, createdDate: “22/04/2025 10:05:24”24, updatedDate: “22/04/2025 10:05:24”},{citizenName: Trần Minh A, ZaloId: 0934234234, action: “edit service”, createdDate: “22/04/2025 10:05:24”24, updatedDate: “22/04/2025 10:05:24”},{citizenName: Trần Minh A, ZaloId: 0934234234, action: “edit service”, createdDate: “22/04/2025 10:05:24”24, updatedDate: “22/04/2025 10:05:24”},{citizenName: Trần Minh A, ZaloId: 0934234234, action: “edit service”, createdDate: “22/04/2025 10:05:24”24, updatedDate: “22/04/2025 10:05:24”},{citizenName: Trần Minh A, ZaloId: 0934234234, action: “edit service”, createdDate: “22/04/2025 10:05:24”24, updatedDate: “22/04/2025 10:05:24”},{citizenName: Trần Minh A, ZaloId: 0934234234, action: “edit service”, createdDate: “22/04/2025 10:05:24”24, updatedDate: “22/04/2025 10:05:24”},{citizenName: Trần Minh A, ZaloId: 0934234234, action: “edit service”, createdDate: “22/04/2025 10:05:24”24, updatedDate: “22/04/2025 10:05:24”},{citizenName: Trần Minh A, ZaloId: 0934234234, action: “edit service”, createdDate: “22/04/2025 10:05:24”24, updatedDate: “22/04/2025 10:05:24”},{citizenName: Trần Minh A, ZaloId: 0934234234, action: “edit service”, createdDate: “22/04/2025 10:05:24”24, updatedDate: “22/04/2025 10:05:24”}]
+                                        </p>
                                     </div>
-                                    <label for="select-user" class="mb-0">Nguyễn Văn A </label>
-                                </div>
-                                <div class="line-content"></div>
-                                <div class="d-flex align-items-center " style="flex: 2;justify-content: start;">
-                                    <p style="color: #919191;font-weight: 400;" class="ms-5">Màn hình chính </p>
-                                </div>
-                                <div class="line-content"></div>
-                                <div class="d-flex align-items-center" style="flex: 3;overflow: hidden;">
-                                    <p class="detail-content mx-5 ms-5">{username: anh.nv@gmail.com, password:******}
-                                    </p>
-                                </div>
-                                <div class="line-content"></div>
-                                <div class="d-flex flex-column justify-content-center align-items-center"
-                                    style="flex:1.5;">
-                                    <p>21/04/2025</p>
-                                    <p>08:10:12</p>
-                                </div>
-                            </div>
-                            <div class="d-flex mt-4 section-dislay-content">
-                                <div class="d-flex align-items-center" style="flex:1.5;">
-                                    <div class="ms-4 d-flex align-items-start ">
-                                      <input type="checkbox" id="select-user" class="me-2" />
-                                    </div>
-                                    <label for="select-user" class="mb-0">Nguyễn Văn A </label>
-                                </div>
-                                <div class="line-content"></div>
-                                <div class="d-flex align-items-center " style="flex: 2;justify-content: start;">
-                                    <p style="color: #919191;font-weight: 400;" class="ms-5">Màn hình chính </p>
-                                </div>
-                                <div class="line-content"></div>
-                                <div class="d-flex align-items-center" style="flex: 3;overflow: hidden;">
-                                    <p class="detail-content mx-5 ms-5">{username: anh.nv@gmail.com, password:******}
-                                    </p>
-                                </div>
-                                <div class="line-content"></div>
-                                <div class="d-flex flex-column justify-content-center align-items-center"
-                                    style="flex:1.5;">
-                                    <p>21/04/2025</p>
-                                    <p>08:10:12</p>
-                                </div>
-                            </div>
-                            <div class="d-flex mt-4 section-dislay-content">
-                                <div class="d-flex align-items-center" style="flex:1.5;">
-                                    <div class="ms-4 d-flex align-items-start ">
-                                      <input type="checkbox" id="select-user" class="me-2" />
-                                    </div>
-                                    <label for="select-user" class="mb-0">Nguyễn Văn A </label>
-                                </div>
-                                <div class="line-content"></div>
-                                <div class="d-flex align-items-center " style="flex: 2;justify-content: start;">
-                                    <p style="color: #919191;font-weight: 400;" class="ms-5">Màn hình chính </p>
-                                </div>
-                                <div class="line-content"></div>
-                                <div class="d-flex align-items-center" style="flex: 3;overflow: hidden;">
-                                    <p class="detail-content mx-5 ms-5">{username: anh.nv@gmail.com, password:******}
-                                    </p>
-                                </div>
-                                <div class="line-content"></div>
-                                <div class="d-flex flex-column justify-content-center align-items-center"
-                                    style="flex:1.5;">
-                                    <p>21/04/2025</p>
-                                    <p>08:10:12</p>
-                                </div>
-                            </div>
-                            <div class="d-flex mt-4 section-dislay-content">
-                                <div class="d-flex align-items-center" style="flex:1.5;">
-                                    <div class="ms-4 d-flex align-items-start ">
-                                      <input type="checkbox" id="select-user" class="me-2" />
-                                </div>
-                                    <label for="select-user" class="mb-0">Nguyễn Văn A </label>
-                                </div>
-                                <div class="line-content"></div>
-                                <div class="d-flex align-items-center " style="flex: 2;justify-content: start;">
-                                    <p style="color: #919191;font-weight: 400;" class="ms-5">Màn hình chính </p>
-                                </div>
-                                <div class="line-content"></div>
-                                <div class="d-flex align-items-center" style="flex: 3;overflow: hidden;">
-                                    <p class="detail-content mx-5 ms-5">{username: anh.nv@gmail.com, password:******}
-                                    </p>
-                                </div>
-                                <div class="line-content"></div>
-                                <div class="d-flex flex-column justify-content-center align-items-center"
-                                    style="flex:1.5;">
-                                    <p>21/04/2025</p>
-                                    <p>08:10:12</p>
-                                </div>
-                            </div>
-                            <div class="d-flex mt-4 section-dislay-content">
-                                <div class="d-flex align-items-center" style="flex:1.5;">
-                                    <div class="ms-4 d-flex align-items-start ">
-                                      <input type="checkbox" id="select-user" class="me-2" />
-                                </div>
-                                    <label for="select-user" class="mb-0">Nguyễn Văn A </label>
-                                </div>
-                                <div class="line-content"></div>
-                                <div class="d-flex align-items-center " style="flex: 2;justify-content: start;">
-                                    <p style="color: #919191;font-weight: 400;" class="ms-5">Màn hình chính </p>
-                                </div>
-                                <div class="line-content"></div>
-                                <div class="d-flex align-items-center" style="flex: 3;overflow: hidden;">
-                                    <p class="detail-content mx-5 ms-5">{username: anh.nv@gmail.com, password:******}
-                                    </p>
-                                </div>
-                                <div class="line-content"></div>
-                                <div class="d-flex flex-column justify-content-center align-items-center"
-                                    style="flex:1.5;">
-                                    <p>21/04/2025</p>
-                                    <p>08:10:12</p>
-                                </div>
-                            </div>
-                            <div class="d-flex mt-4 section-dislay-content">
-                                <div class="d-flex align-items-center" style="flex:1.5;">
-                                    <div class="ms-4 d-flex align-items-start ">
-                                      <input type="checkbox" id="select-user" class="me-2" />
-                                </div>
-                                    <label for="select-user" class="mb-0">Nguyễn Văn A </label>
-                                </div>
-                                <div class="line-content"></div>
-                                <div class="d-flex align-items-center " style="flex: 2;justify-content: start;">
-                                    <p style="color: #919191;font-weight: 400;" class="ms-5">Màn hình chính </p>
-                                </div>
-                                <div class="line-content"></div>
-                                <div class="d-flex align-items-center" style="flex: 3;overflow: hidden;">
-                                    <p class="detail-content mx-5 ms-5">{username: anh.nv@gmail.com, password:******}
-                                    </p>
                                 </div>
                                 <div class="line-content"></div>
                                 <div class="d-flex flex-column justify-content-center align-items-center"
