--- a/html/user-history.html
+++ b/html/user-history.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/css/bootstrap-datepicker.min.css" rel="stylesheet">
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/index.css" />
     <link rel="stylesheet" href="../css/responsive.css" />
@@ -122,8 +123,16 @@
             <main class="col-10 display-container">
                 <div class="container-role-management">
                     <div class="header-news d-flex justify-content-between align-items-center">
-                        <p class="mb-0">Nhật lý sử dụng người dùng</p>
-                        <button class="btn">Xóa log</button>
+                        <p class="mb-0">Nhật lý người dùng</p>
+                        <div class="d-flex gap-5">
+                            <div class="datepicker-wrapper position-relative">
+                                <div class="input-group">
+                                  <input type="text" id="datepicker" class="form-control" placeholder="Chọn ngày"/>
+                                  <span class="input-group-text" id="calendar-icon"><i class="bi bi-calendar3"></i></span>
+                                </div>
+                            </div>
+                            <button>Xóa log</button>
+                        </div>
                     </div>
 
                     <div class="content">
@@ -315,11 +324,14 @@
         </div>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/js/bootstrap-datepicker.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.10.0/locales/bootstrap-datepicker.vi.min.js"></script>
     <script src="../js/user-history.js"></script>
     <script src="../js/modal.js"></script>
     
