update css modal-confirm in main-screen

--- a/html/main-screen.html
+++ b/html/main-screen.html
@@ -241,7 +241,7 @@
                             <div class="d-flex align-items-center gap-3" style="flex: 4;">
                                 <img src="/image/avatar2.jpg" alt="logo" class="img-fluid rounded-circle" />
                                 <div>
-                                    <p class="mb-0 name">Nguyễn Hoàng Trọng Thế</p>
+                                    <p class="mb-0 name">Nguyễn Văn A</p>
                                     <p class="mb-0 location">
                                         Khu tập thể nhà máy nước Quang Trung, SN 16 ngõ 17
                                     </p>
@@ -533,14 +533,15 @@
         data-bs-backdrop="false">
         <div class="modal-dialog modal-dialog-centered modal-lg confirm-modal">
             <div class="modal-content">
+
                 <div class="modal-header">
-                    <p class="modal-title" id="confirmModalLabel">Xác nhận hủy yêu cầu</p>
+                    <p class="modal-title" id="confirmModalLabel">HỦY YÊU CẦU</p>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Đóng"></button>
                 </div>
 
                 <div class="modal-body pt-0">
                     <p class="my-3">Bạn có chắc chắn muốn hủy yêu cầu từ :</p>
-                    <div class="info-grid mt-2">
+                    <div class="info-grid mt-2 ms-5">
                         <div class="info-item">
                             <label>Họ và tên:</label>
                             <span id="confirm-name"></span>
@@ -549,15 +550,15 @@
                             <label>STT:</label>
                             <span id="confirm-stt"></span>
                         </div>
-                        <div class="info-item">
+                        <div class="info-item mt-2">
                             <label>SĐT:</label>
                             <span id="confirm-phone"></span>
                         </div>
-                        <div class="info-item">
+                        <div class="info-item mt-2">
                             <label>Dịch vụ:</label>
                             <span id="confirm-service"></span>
                         </div>
-                        <div class="info-item">
+                        <div class="info-item mt-2">
                             <label>Địa chỉ:</label>
                             <span id="confirm-location" class="location"></span>
                         </div>
