update back-drop for modal in main-screen and user-history ; update font size for quill in main-screen and news-management

--- a/html/user-history.html
+++ b/html/user-history.html
@@ -235,7 +235,7 @@
                             <div id="modalContainer">
                                 <form action="">
                                     <div class="modal fade" id="processModal" tabindex="-1"
-                                        aria-labelledby="processModalLabel" data-bs-backdrop="false">
+                                        aria-labelledby="processModalLabel" data-bs-backdrop="true">
                                         <div class="modal-dialog modal-dialog-centered modal-lg custom-modal">
                                             <div class="modal-content">
                                                 <div class="modal-header">
