update font-size for quill in news-management and main-screen

--- a/html/main-screen.html
+++ b/html/main-screen.html
@@ -354,7 +354,7 @@
                             <!-- modal call processing  -->
                             <form action="">
                                 <div class="modal fade" id="processModal" tabindex="-1"
-                                    aria-labelledby="processModalLabel" data-bs-backdrop="false">
+                                    aria-labelledby="processModalLabel" data-bs-backdrop="true">
                                     <div class="modal-dialog modal-dialog-centered modal-lg custom-modal">
                                         <div class="modal-content">
                                             <div class="modal-header">
@@ -412,7 +412,7 @@
                             <!-- modal done -->
                             <form action="">
                                 <div class="modal fade" id="doneModal" tabindex="-1" aria-labelledby="doneModalLabel"
-                                    data-bs-backdrop="false">
+                                    data-bs-backdrop="true">
                                     <div class="modal-dialog modal-dialog-centered modal-lg custom-modal">
                                         <div class="modal-content">
                                             <div class="modal-header">
@@ -462,7 +462,7 @@
                             <!-- modal close -->
                             <form action="">
                                 <div class="modal fade" id="closeModal" tabindex="-1" aria-labelledby="closeModalLabel"
-                                    data-bs-backdrop="false">
+                                    data-bs-backdrop="true">
                                     <div class="modal-dialog modal-dialog-centered modal-lg custom-modal">
                                         <div class="modal-content">
                                             <div class="modal-header">
@@ -530,7 +530,7 @@
     </div>
     <!--Modal confirm -->
     <div class="modal fade" id="confirmModal" tabindex="-1" aria-labelledby="confirmModalLabel" aria-hidden="true"
-        data-bs-backdrop="false">
+        data-bs-backdrop="true">
         <div class="modal-dialog modal-dialog-centered modal-lg confirm-modal">
             <div class="modal-content">
 
@@ -572,6 +572,7 @@
             </div>
         </div>
     </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
