--- a/html/Management-Kiosk.html
+++ b/html/Management-Kiosk.html
@@ -112,7 +112,7 @@
             </div>
             <div class="py-1 ps-5 d-flex align-items-center gap-4">
                 <div class="footer-kiosk-wrapper d-flex justify-content-center align-items-center">
-                    <img src="/image/service5.png">
+                    <img src="/image/service6.png">
                 </div>
                 <label for="">Hướng dẫn</label>
             </div>
@@ -121,17 +121,32 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-    document.getElementById('fullscreen-trigger').addEventListener('click', () => {
-        const elem = document.documentElement; 
-        if (elem.requestFullscreen) {
-        elem.requestFullscreen();
-        } else if (elem.webkitRequestFullscreen) {
-        elem.webkitRequestFullscreen();
-        } else if (elem.msRequestFullscreen) {
-        elem.msRequestFullscreen();
-        }
-    });
+        const triggerElement = document.getElementById('fullscreen-trigger');
+
+        triggerElement.addEventListener('click', () => {
+            if (!document.fullscreenElement) {
+                const elem = document.documentElement; 
+                if (elem.requestFullscreen) {
+                    elem.requestFullscreen();
+                } else if (elem.webkitRequestFullscreen) { 
+                    elem.webkitRequestFullscreen();
+                } else if (elem.msRequestFullscreen) { 
+                    elem.msRequestFullscreen();
+                }
+            }
+        });
+
+        triggerElement.addEventListener('dblclick', () => {
+            if (document.exitFullscreen) {
+                document.exitFullscreen();
+            } else if (document.webkitExitFullscreen) { 
+                document.webkitExitFullscreen();
+            } else if (document.msExitFullscreen) { 
+                document.msExitFullscreen();
+            }
+        });
     </script>
+
 
 </body>
 
