--- a/html/Management-Kiosk.html
+++ b/html/Management-Kiosk.html
@@ -203,7 +203,37 @@
         </div>
     </div>
 
+    <!-- Modal open get number -->
+    <div class="modal fade" id="kioskModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <p class="m-0"></p>
+                </div>
+                <div class="modal-body">
 
+                </div>
+                <div class="modal-footer">
+                    <div class="d-flex justify-content-start align-items-center">
+                        <div class="logo-qr" style="cursor: pointer;">
+                            <img style="width: 48px;height: 48px;" src="/image/QR.png" alt="logo-qr">
+                        </div>
+                        <div class="instruct-zalo d-flex justify-content-between" style="cursor: pointer;">
+                            <div class="image-wrap d-flex align-items-center justify-content-center">
+                                <img src="/image/image 144 .png" alt="" style="width: 25px;height: 25px;">
+                            </div>
+                            <p class=" fw-bold m-0 d-flex justify-content-center align-items-center">Kích hoạt Zalo app
+                                <br> để lấy số trực tuyến tại đây
+                            </p>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-end ms-auto gap-3">
+                        <button class="button-close" type="button" data-bs-dismiss="modal">Đóng</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
@@ -252,11 +282,14 @@
         // open modal kiosk
         document.querySelectorAll('.kiosk').forEach(kiosk => {
             kiosk.addEventListener('click', () => {
-                const title = kiosk.querySelector('span')?.textContent;
+                const spanText = kiosk.querySelector('span')?.textContent || '';
+                const serviceName = spanText.split(':')[1]?.trim();
+
                 const modalHeader = document.querySelector('#kioskModal .modal-header p');
-                if (modalHeader) {
-                    modalHeader.textContent = title;
+                if (modalHeader && serviceName) {
+                    modalHeader.textContent = serviceName;
                 }
+
                 openModalById('kioskModal');
             });
         });
