--- a/html/Management-Kiosk.html
+++ b/html/Management-Kiosk.html
@@ -287,7 +287,7 @@
 
                 const modalHeader = document.querySelector('#kioskModal .modal-header p');
                 if (modalHeader && serviceName) {
-                    modalHeader.textContent = serviceName;
+                    modalHeader.textContent = `DỊCH VỤ: ${serviceName}`;
                 }
 
                 openModalById('kioskModal');
